major fixes for all project