@@ -1,28 +1,24 @@
 package ru.skomorokhin.documentoperator.scheduler;
 
-import org.springframework.beans.factory.annotation.Value;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Component;
-import ru.skomorokhin.documentoperator.dto.DocumentResultDto;
 import ru.skomorokhin.documentoperator.model.entity.Document;
 import ru.skomorokhin.documentoperator.model.enums.DocumentStatus;
 import ru.skomorokhin.documentoperator.repository.DocumentRepository;
 import ru.skomorokhin.documentoperator.service.DocumentService;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
-@Component
+@Slf4j
 public class ApproveWorker {
 
     private final DocumentRepository documentRepository;
     private final DocumentService documentService;
-
     private final int batchSize;
 
-    public ApproveWorker(DocumentRepository documentRepository,
-                         DocumentService documentService,
-                         @Value("${document-operator.batchSize}") int batchSize) {
+    public ApproveWorker(
+            DocumentRepository documentRepository,
+            DocumentService documentService,
+            int batchSize
+    ) {
         this.documentRepository = documentRepository;
         this.documentService = documentService;
         this.batchSize = batchSize;
@@ -30,16 +26,16 @@ public class ApproveWorker {
 
     @Scheduled(fixedDelayString = "${document-operator.worker.approve-interval-ms}")
     public void run() {
-        List<Document> submitted = documentRepository.findByStatus(DocumentStatus.SUBMITTED)
+        var submitted = documentRepository.findByStatus(DocumentStatus.SUBMITTED)
                 .stream()
                 .limit(batchSize)
-                .collect(Collectors.toList());
+                .toList();
 
         if (submitted.isEmpty()) return;
 
-        List<Long> ids = submitted.stream().map(Document::getId).collect(Collectors.toList());
-        List<DocumentResultDto> results = documentService.approveDocuments(ids, "approve-worker");
-
-        results.forEach(r -> System.out.println("[ApproveWorker] " + r.getDocumentId() + " -> " + r.getMessage()));
+        documentService.approveDocuments(
+                submitted.stream().map(Document::getId).toList(),
+                "approve-worker"
+        ).forEach(r -> log.info("[ApproveWorker] " + r.getDocumentId() + " -> " + r.getMessage()));
     }
 }
